--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["JoeCapHuang <kapt.tesla@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 flask = "^3.0.3"
 python-dotenv = "^1.0.1"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
