--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
 psycopg2-binary = "^2.9.9"
 validators = "^0.34.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
