--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gunicorn = "^23.0.0"
 psycopg2-binary = "^2.9.9"
 validators = "^0.34.0"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
