change python from 3.11 to 3.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["JoeCapHuang <kapt.tesla@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10,<4.0"
 flask = "^3.0.3"
 python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
