--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["JoeCapHuang <kapt.tesla@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "page_analyzer" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
